# gig-map-pangenome-graph-viewer

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html
.github/workflows/: pages.yml  preview-cleanup.yml  preview.yml
assets/: index-DJ9_QKpa.js  index-DJ9_QKpa.js.map  index-ZcplGbzz.css
graph/: edges.arrow  meta.arrow  nodes.arrow
pr-preview/pr-1/: index.html
pr-preview/pr-1/assets/: index-DC8PLhpf.js  index-DC8PLhpf.js.map  index-DhUyjo-i.js  index-DhUyjo-i.js.map  index-ZRbyQbQ0.css
pr-preview/pr-1/graph/: meta.arrow  nodes.arrow
pr-preview/pr-2/: index.html
pr-preview/pr-2/graph/: meta.arrow
pr-preview/pr-3/: index.html
pr-preview/pr-3/assets/: index-5_W1GMpr.js  index-5_W1GMpr.js.map  index-BKWG5Bba.js  index-BKWG5Bba.js.map  index-BP0dbjOl.js  index-BP0dbjOl.js.map  index-BgGegZ7v.js  index-BgGegZ7v.js.map  index-BmFoMYYO.js  index-BmFoMYYO.js.map  index-CBp-OuJz.js  index-CBp-OuJz.js.map  index-CLqBJKJ-.js  index-CLqBJKJ-.js.map  index-CX_rmh28.js  index-CX_rmh28.js.map  index-Ct4acv6h.css  index-Cycv-YP-.js  index-Cycv-YP-.js.map  index-D5ztFGxX.js  index-IWE6NJ9X.js  (+4 more)
pr-preview/pr-4/: index.html
preprocess/: pyproject.toml
preprocess/preprocess/: __init__.py  build.py  cli.py  layout.py  read.py  write.py
scripts/: capture_screenshots.mjs  generate_demo_data.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: dropzone.ts  embed.ts  encoding.ts  export.ts  filter.ts  graph.ts  interactions.ts  lasso.ts  layout.ts  loader.ts  main.ts  palettes.ts  physics.ts  render.ts  search.ts  styles.css  ui.ts
(+4 files in other folders)
