[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gig-map-viewer-preprocess"
version = "0.1.0"
description = "Preprocess gig-map Nextflow output into a binary graph for the viewer"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[project.scripts]
gig-map-preprocess = "preprocess.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["preprocess"]
